# pokemon-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_and_run_tests.yml  rust.yml
src/: constants.rs  functions.rs  generation.rs  lib.rs  list.rs
src/data/: ch.json  ch.rs  cn.rs  de.json  de.rs  en.json  en.rs  fr.json  fr.rs  jp.json  jp.rs  mod.rs  ru.json  ru.rs
src/data/element/: en.rs  mod.rs  zh_cn.rs
src/data/region/: ch.rs  cn.rs  de.rs  en.rs  fr.rs  jp.rs  mod.rs  ru.rs
src/data/sprites/pokemon/kanto/: blastoise  bulbasaur  charizard  charmander  charmeleon  ivysaur  squirtle  venusaur  warturtle
src/declarations/: generation.rs  mod.rs  string.rs  vector.rs
src/github/: constants.rs
src/test/: language_support.rs  mod.rs  panic_tests.rs  tests.rs
src/test/element/: element_support.rs  mod.rs
src/test/region/: language_support.rs  mod.rs
src/util/: mod.rs  panic_by_reason.rs
