[package]
name = "pokemon-rs"
version = "1.0.3"
authors = ["JonasJore <jonas.jore@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JonasJore/pokemon-rs.git"
documentation = "https://github.com/JonasJore/pokemon-rs"
description = "Rust crate for getting Pokémon names"
repository = "https://github.com/JonasJore/pokemon-rs"

[dependencies]
rand = "0.8.5"