[package]
name = "pokemon-rs"
version = "1.6.1"
authors = ["JonasJore <jonas.jore@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JonasJore/pokemon-rs.git"
documentation = "https://docs.rs/pokemon-rs/latest/pokemon_rs/"
description = "Rust crate for getting Pokémon names"
repository = "https://github.com/JonasJore/pokemon-rs"

[dependencies]
maplit = "1.0.2"
rand = "0.8.5"